# cpr-indoornav-ridgeback

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: bridge.yaml
launch/: bridge_relay.launch  load_bridge_params.launch  platform_adaptor.launch  power_monitor.launch  ridgeback_indoornav.launch  safety_stop.launch
launch/include/: bridge.launch.xml
scripts/: environment  install  ridgeback_power_monitor  ridgeback_safety_stop  ridgeback_twist_repub  start_ridgeback_bridge
urdf/: indoornav_ridgeback.urdf.xacro
